Add billy rating, table formatting, css

--- a/index.html
+++ b/index.html
@@ -3,8 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Dead by Daylight Character Ratings</title>
+    <link rel="stylesheet" type="text/css" href="./css/main.css" />
 </head>
 <body>
-
+    <div class="table-div">
+        <table>
+            <tr>
+                <th>Killer</th>
+                <th>Rating</th>
+                <th>Reason</th>
+            </tr>
+            <tr>
+                <td><img src="./images/billy.png"><br>Hillbilly</td>
+                <td>S</td>
+                <td>Billy's one-hit down is pretty strong because it makes chases go faster. He also has high mobility with
+                    his chainsaw, which eliminates the need to slow down the overall game. His ability to go from one side
+                    of the map to another in a few short seconds is the most powerful thing you can have in quick paced
+                    games.
+                </td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
