--- a/index.html
+++ b/index.html
@@ -5,25 +5,102 @@
     <title>Dead by Daylight Character Ratings</title>
     <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 </head>
 <body>
-    <div class="table-div">
-        <table>
-            <tr>
-                <th>Killer</th>
-                <th>Rating</th>
-                <th>Reason</th>
-            </tr>
-            <tr>
-                <td><img src="./images/billy.png"><br>Hillbilly</td>
-                <td>S</td>
-                <td>Billy's one-hit down is pretty strong because it makes chases go faster. He also has high mobility with
-                    his chainsaw, which eliminates the need to slow down the overall game. His ability to go from one side
-                    of the map to another in a few short seconds is the most powerful thing you can have in quick paced
-                    games.
-                </td>
-            </tr>
-        </table>
+    <div id="body">
+        <div class="table-div">
+            <table>
+                <tr>
+                    <th>Killer</th>
+                    <th>Rating</th>
+                    <th>Reason</th>
+                </tr>
+                <tr>
+                    <td><img src="./images/nurse.png"><br><a href="https://deadbydaylight.gamepedia.com/Sally_Smithson" target="_blank">Nurse</a></td>
+                    <td><a href="#" data-toggle="modal" data-target="#ratings-modal">S+</a></td>
+                    <td>
+                        Nurse is the absolute strongest killer in the game. Her blinks gives her high mobility around the
+                        map while also allowing her to ignore solid objects (which is useful during chases where the
+                        survivor's can only put solid objects between themselves and the killer to escape). Her mobility
+                        gives her the ability to hook a survivor, chase someone else, and then return to the hook as soon
+                        as the survivor is unhooked.
+                    </td>
+                </tr>
+                <tr>
+                    <td><img src="./images/billy.png"><br><a href="https://deadbydaylight.gamepedia.com/Max_Thompson_Jr." target="_blank">Hillbilly</a></td>
+                    <td><a href="#" data-toggle="modal" data-target="#ratings-modal">S</a></td>
+                    <td>
+                        Billy's one-hit down is pretty strong because it makes chases go faster. He also has high mobility
+                        with his chainsaw, which eliminates the need to slow down the overall game. His ability to go from
+                        one side of the map to another in a few short seconds is the most powerful thing you can have in
+                        quick-paced games.
+                    </td>
+                </tr>
+                <tr>
+                    <td><img src="./images/doc.png"><br>Doctor</td>
+                    <td><a href="#" data-toggle="modal" data-target="#ratings-modal">A+</a></td>
+                    <td>
+                        The Doctor is a controversial killer because of his ability to gain information about the situation.
+                        His Shock Therapy ability allows him to make survivors scream when they are in the terror radius.
+                        This means no need for Whispers. His ability also allows him to shutdown pallets and loops because
+                        the shock cancels the ability to interact. He also has the longest lunge in the game (comparable to
+                        Freddy and Mike at EW3).
+                    </td>
+                </tr>
+                <tr>
+                    <td><img src="./images/wraith.png"><br>Wraith</td>
+                    <td><a href="#" data-toggle="modal" data-target="#ratings-modal">D</a></td>
+                    <td>
+                        D for "why couldn't the Doc be this bad?". Wraith is my favorite killer because of his spook factor
+                        to brand new survivors. His ability to cloak and gain some movement speed is cool but mostly
+                        ineffective against survivors who know how to kite a killer. Some of his addons make him stronger
+                        (maybe B tier), but base stats show that he is just a plain killer.
+                    </td>
+                </tr>
+                <tr>
+                    <td><img src="./images/freddy.png"><br>Freddy</td>
+                    <td><a href="#" data-toggle="modal" data-target="#ratings-modal">F</a></td>
+                    <td>
+                        Press F to pay respects because Freddy has no strengths at all besides slowing survivors down a bit
+                        when they are in the dream world. His speed is about the same as all normal killers, he cannot hit
+                        survivors unless they are in the dream (which means no way to effectively camp), and it takes a few
+                        seconds to pull people into the dream. Freddy is effective in 1v1 scenarios, however this is a 4v1.
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
+    <!-- Ratings Modal -->
+    <div id="ratings-modal" tabindex="-1" class="modal fade" role="dialog" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">How Ratings Work</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Ratings are based on Mobility, Down-ability, and Shutdown-ability. The following order is
+                        Greatest to Least:</p>
+                    <ol>
+                        <li>S</li>
+                        <li>A</li>
+                        <li>B</li>
+                        <li>C</li>
+                        <li>D</li>
+                        <li>F</li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Ratings Modal -->
+
+    <!-- Bootstrap Scripts -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
 </body>
 </html>
