--- a/ratings.html
+++ b/ratings.html
@@ -16,37 +16,6 @@
                     <th>Rating</th>
                     <th>Reason</th>
                 </tr>
-                <tr>
-                    <td><img src="./images/doc.png"><br>Doctor</td>
-                    <td><a href="#" data-toggle="modal" data-target="#ratings-modal">A+</a></td>
-                    <td>
-                        The Doctor is a controversial killer because of his ability to gain information about the situation.
-                        His Shock Therapy ability allows him to make survivors scream when they are in the terror radius.
-                        This means no need for Whispers. His ability also allows him to shutdown pallets and loops because
-                        the shock cancels the ability to interact. He also has the longest lunge in the game (comparable to
-                        Freddy and Mike at EW3).
-                    </td>
-                </tr>
-                <tr>
-                    <td><img src="./images/wraith.png"><br>Wraith</td>
-                    <td><a href="#" data-toggle="modal" data-target="#ratings-modal">D</a></td>
-                    <td>
-                        D for "why couldn't the Doc be this bad?". Wraith is my favorite killer because of his spook factor
-                        to brand new survivors. His ability to cloak and gain some movement speed is cool but mostly
-                        ineffective against survivors who know how to kite a killer. Some of his addons make him stronger
-                        (maybe B tier), but base stats show that he is just a plain killer.
-                    </td>
-                </tr>
-                <tr>
-                    <td><img src="./images/freddy.png"><br>Freddy</td>
-                    <td><a href="#" data-toggle="modal" data-target="#ratings-modal">F</a></td>
-                    <td>
-                        Press F to pay respects because Freddy has no strengths at all besides slowing survivors down a bit
-                        when they are in the dream world. His speed is about the same as all normal killers, he cannot hit
-                        survivors unless they are in the dream (which means no way to effectively camp), and it takes a few
-                        seconds to pull people into the dream. Freddy is effective in 1v1 scenarios, however this is a 4v1.
-                    </td>
-                </tr>
             </table>
         </div>
     </div>
@@ -61,7 +30,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p>Ratings are based on Mobility, Down-ability, and Shutdown-ability. The following order is
+                    <p>Ratings are based on Mobility, Down-ability, and Shutdown-ability. These are based on my research and opinions. The following order is
                         Greatest to Least:</p>
                     <ol>
                         <li>S</li>
