Change JS filename, add JSDoc, update color scheme for memes

--- a/ratings.html
+++ b/ratings.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 </head>
-<body onload="data(populateKillerTable)">
+<body onload="getData(populateKillerTable)">
     <div id="body">
         <div class="table-div">
             <table id="killerTable">
@@ -45,7 +45,7 @@
         </div>
     </div>
     <!-- End Ratings Modal -->
-    <script src="scripts/ratingsData.js" type="text/javascript"></script>
+    <script src="scripts/RatingsController.js" type="text/javascript"></script>
     <!-- Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
