Add best and worst to the tier list. Add text color to modal (it was white before)

--- a/ratings.html
+++ b/ratings.html
@@ -31,12 +31,12 @@
                     <p>Ratings are based on Mobility, Down-ability, and Shutdown-ability. These are based on my research and opinions. The following order is
                         Greatest to Least:</p>
                     <ol>
-                        <li>S</li>
+                        <li>S (Best)</li>
                         <li>A</li>
                         <li>B</li>
                         <li>C</li>
                         <li>D</li>
-                        <li>F</li>
+                        <li>F (Worst)</li>
                     </ol>
                 </div>
             </div>
