Move favicon reference to the dbd-home repo

--- a/ratings.html
+++ b/ratings.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Dead by Daylight Character Ratings</title>
-    <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/dbd-projects/dbd-apps-home/master/images/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/ratings.css" />
     <link rel="stylesheet" type="text/css" href="https://rawgithub.com/dbd-projects/dbd-navbar/master/navbar.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
